fix: app10 기본 문구 추가

--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
               </div>
               <div class="input-wrap">
                 <label for="app10-writer">Writer</label>
-                <input type="text" name="app10-writer" id="app10Writer" placeholder="@더 글로리" value="@더 글로리" />
+                <input type="text" name="app10-writer" id="app10Writer" placeholder="@더 글로리" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="bg">
