feat: template navigation 추가

--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
             </ul>
           </div>
         </div>
+        <nav id="nav">
+          <ul>
+            <li><a href="#app1"><img src="./images/app1_sample.webp" alt="app1_sample">Today Weather</a></li>
+            <li><a href="#app2"><img src="./images/app2_sample.webp" alt="app2_sample">Yellow City</a></li>
+            <li><a href="#app3"><img src="./images/app3_sample.webp" alt="app3_sample">Bicycle Repair Shop</a></li>
+            <li><a href="#app4"><img src="./images/app4_sample.webp" alt="app4_sample">Perilla Leaf</a></li>
+            <li><a href="#app5"><img src="./images/app5_sample.webp" alt="app5_sample">Summer Vacation</a></li>
+            <li><a href="#app6"><img src="./images/app6_sample.webp" alt="app6_sample">Go Home</a></li>
+            <li><a href="#app7"><img src="./images/app7_sample.webp" alt="app7_sample">Night Duty</a></li>
+            <li><a href="#app8"><img src="./images/app8_sample.webp" alt="app8_sample">IKEA</a></li>
+            <li><a href="#app9"><img src="./images/app9_sample.webp" alt="app9_sample">Spring</a></li>
+            <li><a href="#app10"><img src="./images/app10_sample.webp" alt="app10_sample">Thumbnail Note</a></li>
+          </ul>
+        </nav>
       </header>
 
       <!-- main container -->
