fix: 파일 선택 문구 수정 및 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <input type="text" id="icon" />
               </div>
               <div class="file-wrap">
-                <label for="fileInput" class="btn">Choose File</label>
+                <label for="fileInput" class="btn">Upload</label>
                 <input type="file" id="fileInput" accept="image/*" />
               </div>
               <div class="input-wrap date-wrap">
@@ -338,7 +338,7 @@
                 <input type="color" name="app2-title-color" id="app2TitleColor" value="#EDF44F" />
               </div>
               <div class="file-wrap">
-                <label for="chooseFileApp2" class="btn">Choose File</label>
+                <label for="chooseFileApp2" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp2" id="chooseFileApp2" accept="image/*" />
               </div>
               <div class="selected-image" id="selectedImageApp2">
@@ -387,7 +387,7 @@
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="file-wrap">
-                <label for="chooseFileApp3" class="btn">Choose File</label>
+                <label for="chooseFileApp3" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp3" id="chooseFileApp3" accept="image/*" />
               </div>
               <div class="selected-image" id="selectedImageApp3">
@@ -422,7 +422,7 @@
           <div id="app4" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp4" class="btn">Choose File</label>
+                <label for="chooseFileApp4" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp4" id="chooseFileApp4" accept="image/*" />
               </div>
               <div class="input-wrap color">
@@ -471,7 +471,7 @@
           <div id="app5" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp5" class="btn">Choose File</label>
+                <label for="chooseFileApp5" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp5" id="chooseFileApp5" accept="image/*" />
               </div>
               <div class="input-wrap color">
@@ -528,7 +528,7 @@
           <div id="app6" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp6" class="btn">Choose File</label>
+                <label for="chooseFileApp6" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp6" id="chooseFileApp6" accept="image/*" />
               </div>
               <div class="input-wrap color">
@@ -572,7 +572,7 @@
           <div id="app7" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp7" class="btn">Choose File</label>
+                <label for="chooseFileApp7" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp7" id="chooseFileApp7" accept="image/*" />
               </div>
               <div class="input-wrap color">
@@ -621,7 +621,7 @@
           <div id="app8" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp8" class="btn">Choose File</label>
+                <label for="chooseFileApp8" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp8" id="chooseFileApp8" accept="image/*" />
               </div>
               <div class="input-wrap color">
@@ -675,7 +675,7 @@
           <div id="app9" class="app-wrap">
             <div class="item-image">
               <div class="file-wrap">
-                <label for="chooseFileApp9" class="btn">Choose File</label>
+                <label for="chooseFileApp9" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp9" id="chooseFileApp9" accept="image/*" />
               </div>
               <div class="input-wrap color">
