fix: 한글 소개말 추가

--- a/about.html
+++ b/about.html
@@ -4,25 +4,42 @@
     <meta charset="utf-8" />
     <title>Plus Typo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Combine photos and text to create an image for Instagram." />
+    <meta
+      name="description"
+      content="Combine photos and text to create an image for Instagram."
+    />
     <meta name="author" content="clowncdi85@gmail.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Plus Typo" />
     <meta property="og:title" content="Plus Typo" />
-    <meta property="og:description" content="Combine photos and text to create an image for Instagram." />
+    <meta
+      property="og:description"
+      content="Combine photos and text to create an image for Instagram."
+    />
     <meta property="og:image" content="./images/plus_typo_logo3.png" />
     <meta property="og:url" content="https://typo.co.kr/" />
     <meta property="twitter:card" content="Plus Typo" />
     <meta property="twitter:site" content="Plus Typo" />
     <meta property="twitter:title" content="Plus Typo" />
-    <meta property="twitter:description" content="Combine photos and text to create an image for Instagram." />
+    <meta
+      property="twitter:description"
+      content="Combine photos and text to create an image for Instagram."
+    />
     <meta property="twitter:image" content="./images/plus_typo_logo3.png" />
     <meta property="twitter:url" content="https://typo.co.kr/" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/about.css" />
-    <link rel="stylesheet" media="screen and (max-width: 800px)" href="./css/w800.css" />
-    <link rel="stylesheet" media="screen and (max-width: 1200px)" href="./css/a1200.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 800px)"
+      href="./css/w800.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 1200px)"
+      href="./css/a1200.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -55,21 +72,57 @@
 
       <!-- main container -->
       <div class="main-container">
+        <div class="lang">
+          <div class="btn-lang active">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="22"
+              height="22"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                d="M20.664 5.253a1 1 0 0 1 .083 1.411l-10.666 12a1 1 0 0 1-1.495 0l-5.333-6a1 1 0 0 1 1.494-1.328l4.586 5.159l9.92-11.16a1 1 0 0 1 1.411-.082z"
+              />
+            </svg>
+            <span> Eng </span>
+          </div>
+          <div class="btn-lang">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="22"
+              height="22"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                d="M20.664 5.253a1 1 0 0 1 .083 1.411l-10.666 12a1 1 0 0 1-1.495 0l-5.333-6a1 1 0 0 1 1.494-1.328l4.586 5.159l9.92-11.16a1 1 0 0 1 1.411-.082z"
+              />
+            <span> Kor </span>
+          </div>
+        </div>
         <div class="about-wrap">
           <h2>Plus Typo</h2>
           <div class="text-wrap">
             <textarea type="text" id="textFront"></textarea>
           </div>
-          <p><b>PlusTypo</b> is the work of designer and developer <a href="https://github.com/clowncdi" target="_blank">Daeil Choi</a>.</p>
-          <p>Help me make PlusTypo better.</p>
-          <p>Send your feedback and creations to <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>.</p>
+          <p class="about-sub-text1">
+            <b>PlusTypo</b> is the work of designer and developer
+            <a href="https://github.com/clowncdi" target="_blank">Daeil Choi</a>.
+          </p>
+          <p class="about-sub-text2">Help me make PlusTypo better.</p>
+          <p class="about-sub-text3">
+            Send your feedback and creations to
+            <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>.
+          </p>
         </div>
       </div>
 
       <footer>
         <p>Copyright © 2023 PlusTypo</p>
         <address>
-          Send your feedback and creations to <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
+          Send your feedback and creations to
+          <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
         </address>
       </footer>
     </div>
