fix: 모바일 대응 버그 수정

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <!-- main container -->
       <div class="main-container">
         <div class="lang">
-          <div class="btn-lang active">
+          <div class="btn-lang active" id="eng">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="22"
@@ -87,7 +87,7 @@
             </svg>
             <span> Eng </span>
           </div>
-          <div class="btn-lang">
+          <div class="btn-lang" id="kor">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="22"
