--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     <meta property="twitter:image" content="./images/plus_typo_logo3.png" />
     <meta property="twitter:url" content="https://typo.co.kr/" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link
@@ -131,4 +132,12 @@
   <script src="./js/common.js" defer></script>
   <script src="./js/logo.js" defer></script>
   <script src="./js/about.js" defer></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFF63M662N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NFF63M662N');
+  </script>
 </html>
