--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="twitter:image" content="./images/plus_typo_logo2.png" />
     <meta property="twitter:url" content="https://typo.co.kr/" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/app1.css" />
     <link rel="stylesheet" href="./css/sub.css" />
@@ -785,4 +786,12 @@
   <script src="./js/app9.js" defer></script>
   <script src="./js/app10.js" defer></script>
   <script src="./js/logo.js" defer></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFF63M662N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NFF63M662N');
+  </script>
 </html>
