--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0T4BVMKTXC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0T4BVMKTXC');
+    </script>
     <meta charset="utf-8" />
     <title>Plus Typo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -786,12 +795,4 @@
   <script src="./js/app9.js" defer></script>
   <script src="./js/app10.js" defer></script>
   <script src="./js/logo.js" defer></script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFF63M662N"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-NFF63M662N');
-  </script>
 </html>
