--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'G-0T4BVMKTXC');
     </script>
+    <meta name="naver-site-verification" content="b80724f695100998b426a24e78d65b2cdf2cfccc" />
     <meta charset="utf-8" />
     <title>Plus Typo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
