--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
 
       gtag('config', 'G-0T4BVMKTXC');
     </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TW7RCJZ');</script>
+    <!-- End Google Tag Manager -->
     <meta name="naver-site-verification" content="b80724f695100998b426a24e78d65b2cdf2cfccc" />
     <meta charset="utf-8" />
     <title>Plus Typo</title>
