fix: GA event 추가

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
 
       gtag('config', 'G-0T4BVMKTXC');
     </script>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-TW7RCJZ');</script>
-      <!-- End Google Tag Manager -->
     <meta name="naver-site-verification" content="b80724f695100998b426a24e78d65b2cdf2cfccc" />
     <meta charset="utf-8" />
     <title>Plus Typo</title>
@@ -329,7 +322,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainer"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app1', 'Today Weather')"></div>
             </div>
           </div>
         </div>
@@ -373,7 +366,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp2"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app2', 'Yellow city')"></div>
             </div>
           </div>
         </div>
@@ -422,7 +415,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp3"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app3', 'Bicycle Repair Shop')"></div>
             </div>
           </div>
         </div>
@@ -471,7 +464,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp4"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app4', 'Perilla Leaf')"></div>
             </div>
           </div>
         </div>
@@ -528,7 +521,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp5"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app5', 'Summer Vacation')"></div>
             </div>
           </div>
         </div>
@@ -572,7 +565,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp6"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app6', 'Go Home')"></div>
             </div>
           </div>
         </div>
@@ -621,7 +614,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp7"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app7', 'Night Duty')"></div>
             </div>
           </div>
         </div>
@@ -675,7 +668,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp8"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app8', 'IKEA')"></div>
             </div>
           </div>
         </div>
@@ -719,7 +712,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp9"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app9', 'Spring')"></div>
             </div>
           </div>
         </div>
@@ -773,7 +766,7 @@
           <div class="item-result">
             <div class="result-wrap">
               <div class="image-container" id="imageContainerApp10"><i class="result-temp-bg"></i></div>
-              <div class="download"></div>
+              <div class="download" onclick="downloadCountGA('app10', 'Thumbnail Note')"></div>
             </div>
           </div>
         </div>
