feat: privacy policy 추가

--- a/index.html
+++ b/index.html
@@ -780,6 +780,9 @@
         <address>
           Send your feedback and creations to <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
         </address>
+        <p>
+          <a href="./privacy.html">Privacy Policy</a>
+        </p>
       </footer>
     </div>
   </body>
