feat: text input 박스 위치 조절할 수 있는 기능 추가

--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
           <div id="app2" class="app-wrap">
             <div class="item-image">
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app2-title">yellow city</label>
                 <input type="text" name="app2-title" id="app2Title" placeholder="yellow city" maxlength="20" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -388,11 +389,13 @@
                 <input type="color" name="app3-title-color" id="app3TitleColor" value="#FBF07D" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app3-title">bicycle</label>
                 <input type="text" name="app3-title" id="app3Title" placeholder="bicycle" maxlength="20" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app3-sub">REPAIR SHOP</label>
                 <input type="text" name="app3-sub" id="app3Sub" placeholder="REPAIR SHOP" maxlength="30" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -441,11 +444,13 @@
                 <input type="color" name="app4-title-color" id="app4TitleColor" value="#BBDDA0" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app4-title">perilla leaf</label>
                 <input type="text" name="app4-title" id="app4Title" placeholder="perilla leaf" maxlength="15" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap date">
+                <i class="app-move"></i>
                 <label for="app4-date">Date</label>
                 <input type="date" name="app4-date" id="app4Date" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -490,16 +495,19 @@
                 <input type="color" name="app5-title-color" id="app5TitleColor" value="#FFFFFF" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app5-title">Summer</label>
                 <input type="text" name="app5-title" id="app5Title" placeholder="SUMMER" maxlength="6" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app5-sub">Vacation</label>
                 <input type="text" name="app5-sub" id="app5Sub" placeholder="VACATION" maxlength="8" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap date">
+                <i class="app-move"></i>
                 <label for="app5-start-date">Start Date</label>
                 <input type="date" name="app5-start-date" id="app5StartDate" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -547,7 +555,8 @@
                 <input type="color" name="app6-title-color" id="app6TitleColor" value="#F9EEE2" />
               </div>
               <div class="input-wrap">
-                <label for="app6-title">Summer</label>
+                <i class="app-move"></i>
+                <label for="app6-title">Go Home</label>
                 <input type="text" name="app6-title" id="app6Title" placeholder="GOHOME" maxlength="6" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
@@ -591,11 +600,13 @@
                 <input type="color" name="app7-title-color" id="app7TitleColor" value="#EEEEEE" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app7-date">Date</label>
                 <input type="date" name="app7-date" id="app7Date" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app7-title">Night Duty</label>
                 <input type="text" name="app7-title" id="app7Title" placeholder="NIGHT DUTY" maxlength="12" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -640,16 +651,19 @@
                 <input type="color" name="app8-title-color" id="app8TitleColor" value="#FFFFFF" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app8-title">IKEA</label>
                 <input type="text" name="app8-title" id="app8Title" placeholder="IKEA" maxlength="5" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap sub">
+                <i class="app-move"></i>
                 <label for="app8-sub">KOREA</label>
                 <input type="text" name="app8-sub" id="app8Sub" placeholder="KOREA" maxlength="15" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap date">
+                <i class="app-move"></i>
                 <label for="app8-date">Date</label>
                 <input type="date" name="app8-date" id="app8Date" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
@@ -694,6 +708,7 @@
                 <input type="color" name="app9-title-color" id="app9TitleColor" value="#FFFFFF" />
               </div>
               <div class="input-wrap">
+                <i class="app-move"></i>
                 <label for="app9-title">Spring</label>
                 <input type="text" name="app9-title" id="app9Title" placeholder="Spring" maxlength="15" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
