--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
           </div>
           <div id="app2" class="app-wrap">
             <div class="item-image">
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app2-title">yellow city</label>
                 <input type="text" name="app2-title" id="app2Title" placeholder="yellow city" maxlength="20" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app2-title-color">Color Picker</label>
                 <input type="color" name="app2-title-color" id="app2TitleColor" value="#EDF44F" />
               </div>
@@ -384,17 +384,17 @@
           </div>
           <div id="app3" class="app-wrap">
             <div class="item-image">
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app3-title-color">Title Color Picker</label>
                 <input type="color" name="app3-title-color" id="app3TitleColor" value="#FBF07D" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app3-title">bicycle</label>
                 <input type="text" name="app3-title" id="app3Title" placeholder="bicycle" maxlength="20" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app3-sub">REPAIR SHOP</label>
                 <input type="text" name="app3-sub" id="app3Sub" placeholder="REPAIR SHOP" maxlength="30" />
@@ -439,17 +439,17 @@
                 <label for="chooseFileApp4" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp4" id="chooseFileApp4" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app4-title-color">Title Color Picker</label>
                 <input type="color" name="app4-title-color" id="app4TitleColor" value="#BBDDA0" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app4-title">perilla leaf</label>
                 <input type="text" name="app4-title" id="app4Title" placeholder="perilla leaf" maxlength="15" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap date">
+              <div class="input-wrap date move-edit">
                 <i class="app-move"></i>
                 <label for="app4-date">Date</label>
                 <input type="date" name="app4-date" id="app4Date" />
@@ -490,23 +490,23 @@
                 <label for="chooseFileApp5" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp5" id="chooseFileApp5" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app5-title-color">Title Color Picker</label>
                 <input type="color" name="app5-title-color" id="app5TitleColor" value="#FFFFFF" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app5-title">Summer</label>
                 <input type="text" name="app5-title" id="app5Title" placeholder="SUMMER" maxlength="6" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app5-sub">Vacation</label>
                 <input type="text" name="app5-sub" id="app5Sub" placeholder="VACATION" maxlength="8" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap date">
+              <div class="input-wrap date move-edit">
                 <i class="app-move"></i>
                 <label for="app5-start-date">Start Date</label>
                 <input type="date" name="app5-start-date" id="app5StartDate" />
@@ -550,11 +550,11 @@
                 <label for="chooseFileApp6" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp6" id="chooseFileApp6" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app6-title-color">Color Picker</label>
                 <input type="color" name="app6-title-color" id="app6TitleColor" value="#F9EEE2" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app6-title">Go Home</label>
                 <input type="text" name="app6-title" id="app6Title" placeholder="GOHOME" maxlength="6" />
@@ -595,17 +595,17 @@
                 <label for="chooseFileApp7" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp7" id="chooseFileApp7" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app7-title-color">Color Picker</label>
                 <input type="color" name="app7-title-color" id="app7TitleColor" value="#EEEEEE" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app7-date">Date</label>
                 <input type="date" name="app7-date" id="app7Date" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app7-title">Night Duty</label>
                 <input type="text" name="app7-title" id="app7Title" placeholder="NIGHT DUTY" maxlength="12" />
@@ -646,23 +646,23 @@
                 <label for="chooseFileApp8" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp8" id="chooseFileApp8" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app8-title-color">Color Picker</label>
                 <input type="color" name="app8-title-color" id="app8TitleColor" value="#FFFFFF" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app8-title">IKEA</label>
                 <input type="text" name="app8-title" id="app8Title" placeholder="IKEA" maxlength="5" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap sub">
+              <div class="input-wrap sub move-edit">
                 <i class="app-move"></i>
                 <label for="app8-sub">KOREA</label>
                 <input type="text" name="app8-sub" id="app8Sub" placeholder="KOREA" maxlength="15" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap date">
+              <div class="input-wrap date move-edit">
                 <i class="app-move"></i>
                 <label for="app8-date">Date</label>
                 <input type="date" name="app8-date" id="app8Date" />
@@ -703,11 +703,11 @@
                 <label for="chooseFileApp9" class="btn">Upload</label>
                 <input type="file" name="chooseFileApp9" id="chooseFileApp9" accept="image/*" />
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app9-title-color">Color Picker</label>
                 <input type="color" name="app9-title-color" id="app9TitleColor" value="#FFFFFF" />
               </div>
-              <div class="input-wrap">
+              <div class="input-wrap move-edit">
                 <i class="app-move"></i>
                 <label for="app9-title">Spring</label>
                 <input type="text" name="app9-title" id="app9Title" placeholder="Spring" maxlength="15" />
@@ -744,7 +744,7 @@
           </div>
           <div id="app10" class="app-wrap">
             <div class="item-image">
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app10-title-color">Title Color Picker</label>
                 <input type="color" name="app10-title-color" id="app10TitleColor" value="#363636" />
                 <label for="app10-bg-color">BG Color Picker</label>
@@ -755,7 +755,7 @@
                 <textarea name="app10-title" id="app10Title" cols="30" rows="3" placeholder="우리 같이 천천히&#13;&#10;말라 죽어 보자,&#13;&#10;연진아."></textarea>
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
-              <div class="input-wrap color">
+              <div class="input-wrap color move">
                 <label for="app10-sub-color">Sub Color Picker</label>
                 <input type="color" name="app10-sub-color" id="app10SubColor" value="#454545" />
               </div>
