html, css 오류 수정

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h2>Today Weather</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app1_sample.webp" alt="Today Weather Sample Image" width="100%" />
+              <img src="./images/app1_sample.webp" alt="Today Weather Sample Image" />
             </div>
           </div>
           <div id="app1" class="app-wrap">
@@ -311,7 +311,7 @@
               <div class="selected-image" id="selectedImage">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent, 'chooseImg')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent, 'chooseImg')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -334,7 +334,7 @@
             <h2>Yellow City</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app2_sample.webp" alt="Yellow city Sample Image" width="100%" />
+              <img src="./images/app2_sample.webp" alt="Yellow city Sample Image" />
             </div>
           </div>
           <div id="app2" class="app-wrap">
@@ -356,7 +356,7 @@
               <div class="selected-image" id="selectedImageApp2">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent2, 'chooseImg2')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent2, 'chooseImg2')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -379,7 +379,7 @@
             <h2>Bicycle Repair Shop</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app3_sample.webp" alt="Bicycle Repair Shop Sample Image" width="100%" />
+              <img src="./images/app3_sample.webp" alt="Bicycle Repair Shop Sample Image" />
             </div>
           </div>
           <div id="app3" class="app-wrap">
@@ -407,7 +407,7 @@
               <div class="selected-image" id="selectedImageApp3">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent3, 'chooseImg3')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent3, 'chooseImg3')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -430,7 +430,7 @@
             <h2>Perilla Leaf</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app4_sample.webp" alt="Perilla Leaf Sample Image" width="100%" />
+              <img src="./images/app4_sample.webp" alt="Perilla Leaf Sample Image" />
             </div>
           </div>
           <div id="app4" class="app-wrap">
@@ -458,7 +458,7 @@
               <div class="selected-image" id="selectedImageApp4">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent4, 'chooseImg4')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent4, 'chooseImg4')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -481,7 +481,7 @@
             <h2>Summer Vacation</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app5_sample.webp" alt="Summer Vacation Sample Image" width="100%" />
+              <img src="./images/app5_sample.webp" alt="Summer Vacation Sample Image" />
             </div>
           </div>
           <div id="app5" class="app-wrap">
@@ -518,7 +518,7 @@
               <div class="selected-image" id="selectedImageApp5">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent5, 'chooseImg5')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent5, 'chooseImg5')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -541,7 +541,7 @@
             <h2>Go Home</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app6_sample.webp" alt="Go Home Sample Image" width="100%" />
+              <img src="./images/app6_sample.webp" alt="Go Home Sample Image" />
             </div>
           </div>
           <div id="app6" class="app-wrap">
@@ -563,7 +563,7 @@
               <div class="selected-image" id="selectedImageApp6">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent6, 'chooseImg6')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent6, 'chooseImg6')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -586,7 +586,7 @@
             <h2>Night Duty</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app7_sample.webp" alt="Night Duty Sample Image" width="100%" />
+              <img src="./images/app7_sample.webp" alt="Night Duty Sample Image" />
             </div>
           </div>
           <div id="app7" class="app-wrap">
@@ -614,7 +614,7 @@
               <div class="selected-image" id="selectedImageApp7">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent7, 'chooseImg7')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent7, 'chooseImg7')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -637,7 +637,7 @@
             <h2>IKEA</h2>
             <div class="sample">
               <p>IKEA</p>
-              <img src="./images/app8_sample.webp" alt="IKEA Sample Image" width="100%" />
+              <img src="./images/app8_sample.webp" alt="IKEA Sample Image" />
             </div>
           </div>
           <div id="app8" class="app-wrap">
@@ -671,7 +671,7 @@
               <div class="selected-image" id="selectedImageApp8">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent8, 'chooseImg8')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent8, 'chooseImg8')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -694,7 +694,7 @@
             <h2>Spring</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app9_sample.webp" alt="Spring Sample Image" width="100%" />
+              <img src="./images/app9_sample.webp" alt="Spring Sample Image" />
             </div>
           </div>
           <div id="app9" class="app-wrap">
@@ -716,7 +716,7 @@
               <div class="selected-image" id="selectedImageApp9">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent9, 'chooseImg9')">↻ Reset</span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent9, 'chooseImg9')">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -739,7 +739,7 @@
             <h2>Thumbnail Note</h2>
             <div class="sample">
               <p>Sample Output</p>
-              <img src="./images/app10_sample.webp" alt="Thumbnail Note Sample Image" width="100%" />
+              <img src="./images/app10_sample.webp" alt="Thumbnail Note Sample Image" />
             </div>
           </div>
           <div id="app10" class="app-wrap">
@@ -752,7 +752,7 @@
               </div>
               <div class="input-wrap">
                 <label for="app10-title">Title</label>
-                <textarea name="app10-title" id="app10Title" cols="30" rows="3" placeholder="우리 같이 천천히&#13;&#10;말라 죽어 보자,&#13;&#10;연진아."></textarea>
+                <textarea name="app10-title" id="app10Title" cols="30" rows="3" placeholder="우리 같이 천천히 말라 죽어 보자, 연진아."></textarea>
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="input-wrap color move">
@@ -761,7 +761,7 @@
               </div>
               <div class="input-wrap">
                 <label for="app10-sub">Sub Text</label>
-                <textarea name="app10-sub" id="app10Sub" cols="30" rows="3" placeholder="어떡해?&#13;&#10;너네 주님 개빡쳤어.&#13;&#10;너 지옥행이래."></textarea>
+                <textarea name="app10-sub" id="app10Sub" cols="30" rows="3" placeholder="어떡해?&#13&#10너네 주님 개빡쳤어.&#13&#10너 지옥행이래."></textarea>
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
               <div class="input-wrap">
@@ -800,18 +800,19 @@
         </p>
       </footer>
     </div>
-  </body>
 
-  <script src="./js/common.js" defer></script>
-  <script src="./js/app1.js" defer></script>
-  <script src="./js/app2.js" defer></script>
-  <script src="./js/app3.js" defer></script>
-  <script src="./js/app4.js" defer></script>
-  <script src="./js/app5.js" defer></script>
-  <script src="./js/app6.js" defer></script>
-  <script src="./js/app7.js" defer></script>
-  <script src="./js/app8.js" defer></script>
-  <script src="./js/app9.js" defer></script>
-  <script src="./js/app10.js" defer></script>
-  <script src="./js/logo.js" defer></script>
+    <script src="./js/common.js" defer></script>
+    <script src="./js/app1.js" defer></script>
+    <script src="./js/app2.js" defer></script>
+    <script src="./js/app3.js" defer></script>
+    <script src="./js/app4.js" defer></script>
+    <script src="./js/app5.js" defer></script>
+    <script src="./js/app6.js" defer></script>
+    <script src="./js/app7.js" defer></script>
+    <script src="./js/app8.js" defer></script>
+    <script src="./js/app9.js" defer></script>
+    <script src="./js/app10.js" defer></script>
+    <script src="./js/logo.js" defer></script>
+    
+  </body>
 </html>
