--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
     <meta property="twitter:url" content="https://typo.co.kr/" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link
@@ -109,6 +110,7 @@
                 fill="currentColor"
                 d="M20.664 5.253a1 1 0 0 1 .083 1.411l-10.666 12a1 1 0 0 1-1.495 0l-5.333-6a1 1 0 0 1 1.494-1.328l4.586 5.159l9.92-11.16a1 1 0 0 1 1.411-.082z"
               />
+            </svg>
             <span> Kor </span>
           </div>
         </div>
