--- a/privacy.html
+++ b/privacy.html
@@ -30,6 +30,7 @@
     <meta property="twitter:url" content="https://typo.co.kr/" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link
